@@ -92,6 +92,8 @@
                                 <jvmarg>-Duser.language=de</jvmarg>
                                 <jvmarg>-Xms1024M</jvmarg>
                                 <jvmarg>-Xmx3024M</jvmarg>
+                                <jvmarg>--add-opens</jvmarg>
+                                <jvmarg>java.base/java.lang=ALL-UNNAMED</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
