@@ -101,6 +101,8 @@
                                 <jvmarg>-Djnlp.userDomain=WUNDA_BLAU</jvmarg>
                                 <jvmarg>-Xms512M</jvmarg>
                                 <jvmarg>-Xmx1024M</jvmarg>
+                                <jvmarg>--add-opens</jvmarg>
+                                <jvmarg>java.base/java.lang=ALL-UNNAMED</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
